Fixed navbar collapse issue

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -45,7 +45,7 @@ img {
     font-size: 1.25em;
   }
 }
-@media (min-width: 769px) and (max-width: 1000px) {
+@media (min-width: 600px) and (max-width: 1000px) {
   .navbar-brand {
     font-size: 1.5em;
   }
@@ -78,10 +78,6 @@ img {
   padding: 0 -10px;
   border-radius: 0 0 5px 5px;
 }
-
-//h1, h2, h3, h4, h5, h6, p { 
-//  color: white; 
-//}
 
 .emphasis {
   color: orange;
